--- a/styles.css
+++ b/styles.css
@@ -193,3 +193,145 @@ padding-bottom: 1.5rem;
 
 
    /* hero section style end */
+
+
+   /* curriculum style start  */
+
+
+   .curriculum-container {
+    background-image: url("./assets/bg.png");
+    background-position: top left; 
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    /* background-attachment: fixed;  */
+    margin-top: 5rem;
+}
+
+   .curriculum-card {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2.5rem; 
+}
+
+.curriculum-content{
+    width: 90%;
+    margin: auto;
+
+}
+
+.curriculum-title{
+ color: rgb(0, 0, 0);
+/* font-family: Quicksand; */
+font-size: 3rem;
+margin-bottom: 3rem;
+font-weight: 700;
+line-height: 57.5px;
+letter-spacing: 0%;
+text-align: center;
+}
+
+.curriculum-card1{
+    box-sizing: border-box;
+border: 0.94px solid rgb(222, 245, 255);
+border-radius: 18.86px;
+
+box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+background: linear-gradient(180.00deg, rgb(222, 245, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+
+text-align: center;
+padding: 1.5rem;
+}
+
+.curriculum-card2{
+    box-sizing: border-box;
+border: 0.94px solid rgb(255, 244, 220);
+border-radius: 18.86px;
+
+box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+background: linear-gradient(180.00deg, rgb(255, 244, 220),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+text-align: center;
+padding: 1.5rem;
+
+}
+
+.curriculum-card3{
+    box-sizing: border-box;
+    border: 0.94px solid rgb(242, 232, 255);
+    border-radius: 18.86px;
+    
+    box-shadow: inset 0px 0px 28.3px 0.94px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(180.00deg, rgb(238, 225, 255),rgba(255, 255, 255, 0) 40%),rgb(255, 255, 255);
+    text-align: center;
+padding: 1.5rem;
+
+}
+.card >h3{
+    color: rgb(32, 32, 32);
+/* font-family: Quicksand; */
+font-size: 24.52px;
+font-weight: 700;
+line-height: 30.65px;
+letter-spacing: 0%;
+text-align: center;
+padding-top: 1rem;
+padding-bottom: 1rem;
+}
+
+.card > p{
+color: rgb(128, 128, 128);
+/* font-family: Raleway; */
+font-size: 15.09px;
+font-weight: 500;
+line-height: 28.3px;
+letter-spacing: 0%;
+text-align: center;
+padding-bottom: 1.5rem;
+}
+
+.read1 {
+    color: rgb(100, 200, 255);
+    font-size: 15.09px;
+    font-weight: 700;
+    line-height: 28.3px;
+    letter-spacing: 0%;
+    text-align: center;
+    
+    transition: transform 0.3s ease; 
+}
+
+.read1:hover {
+    transform: scale(1.05); /* হোভার করলে টেক্সট একটু বড় হবে */
+}
+
+.read2 {
+    color: #F0AA00;
+    font-size: 15.09px;
+    font-weight: 700;
+    line-height: 28.3px;
+    letter-spacing: 0%;
+    text-align: center;
+    
+    transition: transform 0.3s ease; 
+}
+
+.read2:hover {
+    transform: scale(1.05); /* হোভার করলে টেক্সট একটু বড় হবে */
+}
+
+
+.read3 {
+    color: #8700FF;
+    font-size: 15.09px;
+    font-weight: 700;
+    line-height: 28.3px;
+    letter-spacing: 0%;
+    text-align: center;
+    
+    transition: transform 0.3s ease; 
+}
+
+.read3:hover {
+    transform: scale(1.05); /* হোভার করলে টেক্সট একটু বড় হবে */
+}
+
+   /* curriculum- style end */
