--- a/styles.css
+++ b/styles.css
@@ -171,13 +171,14 @@ padding-top: 1rem;
 padding-bottom: 1.5rem;
    }
 
-   .btn {
-    padding: 10px 16px;
+   .btn, 
+   .our-stories-btn {
+    padding: .7rem 1rem;
     background-color: black;
     color: white;
     border: none;
-    border-radius: 8px;
-    font-size: 16px;
+    border-radius: .6rem;
+    font-size: 1rem;
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
@@ -590,5 +591,112 @@ top: 55%;
 .card-btn{
     padding: 0 1.5rem 0 1.5rem;
 }
-
+.our-stories-btn-div{
+    padding-top: 6rem;
+    padding-bottom: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 /* Our Stories style end */
+
+
+/* footer section style start */
+
+/* General Footer Style */
+.footer {
+    background-color: #00a8ff;
+    padding: 1.3rem 0;
+    color: white;
+  }
+  
+  .footer-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    /* align-items: center; */
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 3rem;
+  }
+  
+  .footer-section {
+    flex: 1;
+    padding: 10px;
+  }
+  
+  /* Logo Section */
+  .logo-section {
+    max-width: 300px;
+  }
+  .logo{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 1rem;
+  }
+  
+  .logo-image {
+    width: 3rem;
+    height: auto;
+    color: white;
+    
+  }
+  
+  .footer-title {
+    font-size: 1.8em;
+    margin: 10px 0;
+  }
+  
+  .footer-description {
+    font-size: 0.9em;
+    line-height: 1.5em;
+  }
+  
+  /* About Section */
+  .about-section .section-title,
+  .contact-section .section-title {
+    font-size: 1.4em;
+    margin-bottom: 10px;
+  }
+  
+  .section-links {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .section-links .footer-link {
+    text-decoration: none;
+    color: white;
+    font-size: 1em;
+    line-height: 2em;
+    display: block;
+  }
+  
+  .section-links .footer-link:hover {
+    text-decoration: underline;
+  }
+  
+  /* Contact Section */
+  .social-links {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .social-icon {
+    display: flex;
+    gap: 1rem;
+
+    background-color: white;
+    color: #00a8ff;
+    text-align: center;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    font-size: 1.2em;
+    line-height: 2rem;
+    text-decoration: none;
+  }
+  
+ 
+  
