--- a/styles.css
+++ b/styles.css
@@ -637,7 +637,8 @@ top: 55%;
   }
   
   .logo-image {
-    width: 3rem;
+    width:4rem;
+    height: 4rem;
     height: auto;
     color: white;
     
