--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@
     background-color: #FEA301; 
     color: #003366;
     border: none;
-    padding: 10px 20px;
+    padding: .9rem 1.5rem;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
@@ -369,8 +369,13 @@ padding-bottom: 1.5rem;
     background-position: top left bottom right;
     background-size: cover;
     background-repeat: no-repeat;
-    padding-top: 5rem ;
+    padding-top: 1rem ;
     background:linear-gradient(0.00deg, rgba(254, 163, 1, 0.3),rgba(255, 255, 255, 0.3) 100%);
+}
+.our-stories-title{
+    font-size: 3rem;
+    text-align: center;
+    padding-bottom: 3rem;
 }
 
 .our-stories-content {
@@ -386,9 +391,9 @@ padding-bottom: 1.5rem;
 }
 
 .our-stories-left-div {
-    border-radius: 16px;
+    border-radius: 1rem;
     background: #fff;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 1rem rgba(0, 0, 0, 0.1);
     /* padding: 1.5rem; */
     transition: transform 0.3s, box-shadow 0.3s;
     position: relative;
@@ -396,22 +401,22 @@ padding-bottom: 1.5rem;
 
 .our-stories-left-div:hover {
     transform: scale(1.03);
-    box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px .3rem 1.2rem rgba(0, 0, 0, 0.2);
 }
 
 .our-stories-left-div > img {
     width: 100%;
     border-radius: .8rem .8rem 0 0;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .our-stories-left-div > button {
     background-color: #2eade8;
     color: #fff;
     border: none;
-    border-radius: 8px;
+    border-radius: .5rem;
     padding: 0.5rem 1rem;
-    font-size: 14px;
+    font-size: .8rem;
     margin-bottom: 1rem;
     cursor: pointer;
 }
@@ -421,7 +426,7 @@ padding-bottom: 1.5rem;
 }
 
 .our-stories-left-div > h2 {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 700;
     color: #000;
     line-height: 1.4;
@@ -430,11 +435,11 @@ padding-bottom: 1.5rem;
 }
 
 .our-stories-left-div > p {
-    font-size: 16px;
+    font-size: 1rem;
     color: #4d4d4d;
     line-height: 1.6;
     padding: 0 1.5rem 0 1.5rem ;
-    padding-bottom: 2rem;
+    padding-bottom: 2.5rem;
 }
 
 .our-stories-child-card {
@@ -499,9 +504,9 @@ top: 55%;
     background: rgb(93, 88, 240);
     color: rgb(255, 255, 255);
     /* font-family: Raleway; */
-    font-size: 15.34px;
+    font-size: 15px;
     font-weight: 500;
-    line-height: 28.76px;
+    line-height: 28px;
     letter-spacing: 0%;
     text-align: left;
     text-transform: capitalize;
@@ -592,7 +597,7 @@ top: 55%;
     padding: 0 1.5rem 0 1.5rem;
 }
 .our-stories-btn-div{
-    padding-top: 6rem;
+    padding-top: 4rem;
     padding-bottom: 4rem;
     display: flex;
     justify-content: center;
